--- a/contact.html
+++ b/contact.html
@@ -810,9 +810,9 @@ var SCALABLE_CSS_PROPERTIES=["border-radius","font-size","line-height"],CONTENT_
                           "width": 332,
                           "height": 72,
                           "children": [],
-                          "figmaNodeName": "Villa No. 11, H No. 1-100/AC/11,Aparna Cyber County, Lingampally, Serilingampally, K.V.Rangareddy,Tg - 500019",
+                          "figmaNodeName": "",
                           "figmaNodeType": "TEXT",
-                          "content": "Villa No. 11, H No. 1-100/AC/11,Aparna Cyber County, Lingampally, Serilingampally, K.V.Rangareddy,Tg - 500019",
+                          "content": "",
                           "font": {
                             "name": "Poppins",
                             "style": "Regular"
