--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@ var SCALABLE_CSS_PROPERTIES=["border-radius","font-size","line-height"],CONTENT_
                       "width": 806,
                       "height": 57,
                       "children": [],
-                      "figmaNodeName": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized staffing services to connect you with the best IAM professionals.",
+                      "figmaNodeName": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized  services to connect you with the best IAM professionals.",
                       "figmaNodeType": "TEXT",
-                      "content": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized staffing services to connect you with the best IAM professionals.",
+                      "content": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized  services to connect you with the best IAM professionals.",
                       "font": {
                         "name": "Inter",
                         "style": "Bold"
@@ -1009,9 +1009,9 @@ var SCALABLE_CSS_PROPERTIES=["border-radius","font-size","line-height"],CONTENT_
               "width": 806,
               "height": 57,
               "children": [],
-              "figmaNodeName": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized staffing services to connect you with the best IAM professionals.",
+              "figmaNodeName": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized  services to connect you with the best IAM professionals.",
               "figmaNodeType": "TEXT",
-              "content": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized staffing services to connect you with the best IAM professionals.",
+              "content": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized  services to connect you with the best IAM professionals.",
               "font": {
                 "name": "Inter",
                 "style": "Bold"
@@ -1190,9 +1190,9 @@ var SCALABLE_CSS_PROPERTIES=["border-radius","font-size","line-height"],CONTENT_
                       "width": 638,
                       "height": 56,
                       "children": [],
-                      "figmaNodeName": "We prioritize security in all of our solutions and staffing services, ensuring that your digital landscape is well-protected.",
+                      "figmaNodeName": "We prioritize security in all of our solutions and  services, ensuring that your digital landscape is well-protected.",
                       "figmaNodeType": "TEXT",
-                      "content": "We prioritize security in all of our solutions and staffing services, ensuring that your digital landscape is well-protected.",
+                      "content": "We prioritize security in all of our solutions and  services, ensuring that your digital landscape is well-protected.",
                       "font": {
                         "name": "Inter",
                         "style": "Medium"
@@ -2605,9 +2605,9 @@ var SCALABLE_CSS_PROPERTIES=["border-radius","font-size","line-height"],CONTENT_
               "width": 806,
               "height": 57,
               "children": [],
-              "figmaNodeName": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized staffing services to connect you with the best IAM professionals.",
+              "figmaNodeName": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized  services to connect you with the best IAM professionals.",
               "figmaNodeType": "TEXT",
-              "content": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized staffing services to connect you with the best IAM professionals.",
+              "content": "At Triquinix we provide cutting-edge Identity and Access Management (IAM) solutions to safeguard your organization’s digital assets, while also offering specialized  services to connect you with the best IAM professionals.",
               "font": {
                 "name": "Inter",
                 "style": "Bold"
@@ -2873,7 +2873,7 @@ var SCALABLE_CSS_PROPERTIES=["border-radius","font-size","line-height"],CONTENT_
                           "children": [],
                           "figmaNodeName": "Digital Marketing Strategy in 2021",
                           "figmaNodeType": "TEXT",
-                          "content": "Staffing Success for Healthcare Provider",
+                          "content": " Success for Healthcare Provider",
                           "font": {
                             "name": "DM Sans",
                             "style": "Bold"
@@ -7494,9 +7494,9 @@ var SCALABLE_CSS_PROPERTIES=["border-radius","font-size","line-height"],CONTENT_
                           "width": 130,
                           "height": 20,
                           "children": [],
-                          "figmaNodeName": "Staffing Solutions",
+                          "figmaNodeName": " Solutions",
                           "figmaNodeType": "TEXT",
-                          "content": "Staffing Solutions",
+                          "content": " Solutions",
                           "font": {
                             "name": "Inter",
                             "style": "Regular"
@@ -8257,9 +8257,9 @@ var SCALABLE_CSS_PROPERTIES=["border-radius","font-size","line-height"],CONTENT_
                           "width": 259,
                           "height": 60,
                           "children": [],
-                          "figmaNodeName": "Stay updated on the latest IAM trends and staffing solutions. Sign up for our newsletter",
+                          "figmaNodeName": "Stay updated on the latest IAM trends and  solutions. Sign up for our newsletter",
                           "figmaNodeType": "TEXT",
-                          "content": "Stay updated on the latest IAM trends and staffing solutions. Sign up for our newsletter",
+                          "content": "Stay updated on the latest IAM trends and  solutions. Sign up for our newsletter",
                           "font": {
                             "name": "Inter",
                             "style": "Regular"
